--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,7 @@
   "version": "0.0.1",
   "minimum_chrome_version": "38",
   "permissions": [
-    "contextMenus",
-    "tabs"
+    "contextMenus"
   ],
 
   "icons": {
